# TikTokGlobalTrends

./: .env.example  .flake8  .gitignore  CHANGELOG.md  INTEGRATION_SUMMARY.md  PHASE_1_1_COMPLETION.md  PHASE_1_2_INTEGRATION_REPORT.md  PHASE_1_3_COMPLETION.md  PHASE_2_COMPLETION.md  PROJECT_STATUS.md  PROJECT_STATUS_CURRENT.md  QUICK-START.md  QUICKSTART_RELATORIO.md  README-COMPLETO.md  README-FINAL.md  README.md  RELATORIO_IMPLEMENTACAO_ACOES.md  RESUMO_IMPLEMENTACAO.md  alembic.ini  demo_phase_2.py  demo_phase_2_standalone.py  diagramas-mermaid.md  final_security_test.py  final_test.py  integration_test.py  kiwify.txt  minimal_security_test.py  prd-tiktok-trends.md  prompts-por-fases.md  pyproject.toml  requirements-dev.txt  requirements.txt  schema-prisma.prisma  security_validation.py  simple_security_test.py  test_enums.py  test_integration.py  test_integration_standalone.py  test_simple.py  validate_security.py
alembic/: env.py
alembic/versions/: 84f99e3be8a6_create_initial_tables.py  f5e34b085318_initial_migration.py
docs/: README.md  RELATORIO_ACOES.md
examples/: README.md  example_reporting.py
reports/: .gitkeep
scripts/: generate_report.py  init_database.py  seed_database.py
src/: __init__.py  main.py
src/api_clients/: __init__.py  tiktok_official_client.py
src/auth/: __init__.py
src/compliance/: __init__.py
src/config/: __init__.py
src/data_processing/: __init__.py  niche_classifier.py  processor.py
src/monitoring/: __init__.py
src/orchestrator/: __init__.py  scheduler.py
src/reporting/: __init__.py  report_generator.py
src/scrapers/: __init__.py  creative_center_scraper.py
src/storage/: __init__.py  database.py
src/storage/models/: __init__.py  audit_log.py  base.py  collection_log.py  compliance_log.py  country.py  creator.py  enums.py  hashtag.py  sound.py  trend.py  video.py
src/ui/: __init__.py
src/utils/: __init__.py  fallback_handler.py  logger.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_api_client.py  test_log_models.py  test_migrations.py  test_models.py  test_processor.py  test_report_generator.py
venv_test/: pyvenv.cfg
